refactor: labels component as separated module